--- a/8.4 Course Project_CopyPlugin/package.json
+++ b/8.4 Course Project_CopyPlugin/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
+    "glob": "^10.3.10",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
