--- a/10.1 React_project_BasicSetup/.eslintrc
+++ b/10.1 React_project_BasicSetup/.eslintrc
@@ -3,6 +3,10 @@
   "extends": ["airbnb"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "react/jsx-props-no-spreading": 0,
+    "react/prop-types": 0,
+    "import/no-dynamic-require": 0,
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }]
   }
 }
