--- a/9.4 ProductionBuild_MultipleWebpackConfig/package.json
+++ b/9.4 ProductionBuild_MultipleWebpackConfig/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
