--- a/11.3 MF_Project_State_Management/MovieApp/package.json
+++ b/11.3 MF_Project_State_Management/MovieApp/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   }
